# coa-converter-app

./: .gitignore  CLAUDE.md  COA Converter Windows.spec  COA Converter.spec  build_windows.ps1  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh
.github/workflows/: build-release.yml  build-windows.yml
assets/: icon.icns
scripts/: build_macos.sh  build_windows.ps1  create_dmg.sh
src/: main.py
src/config/: settings.py
src/core/: ai_verifier.py  converter.py  log_handler.py  template_manager.py  workers.py
src/styles/: theme.qss
src/ui/: main_window.py
src/ui/panels/: batch_panel.py  conversion_panel.py  file_panel.py  results_panel.py  settings_panel.py
src/ui/widgets/: trial_banner.py
